# prefect-cli-utils.py

./: .gitignore  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/prefect_cli_utils/: __init__.py  blocks.py  cli.py  config.py  const.py  hooks.py  tasks.py  utils.py
src/prefect_cli_utils/commands/: config.py  flow_run.py
src/prefect_cli_utils/commands/blocks/: cache.py  credentials.py  infrastructure.py
src/prefect_cli_utils/steps/: example.py
tests/: test_command_blocks.py  test_command_config.py  test_command_flow_run.py  test_load_config.py
tests/unit_tests/: test_cli.py  test_example.py
